@@ -37,6 +37,20 @@
 
 -->
     <listitem>
+      <para>2012-06-17</para>
+      <itemizedlist>
+         <listitem>
+           <para>[bdubbs] - Update rare issues in bootscripts when using LVM
+           or initramfs.</para>
+         </listitem>
+         <listitem>
+           <para>[bdubbs] - Add note about automake run time for tests. 
+           Fixes <ulink url="&lfs-ticket-root;3118">#3118</ulink>.</para>
+         </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2012-06-10</para>
       <itemizedlist>
          <listitem>
