@@ -1,3 +1,10 @@
+2012-06-17 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Only mount /run in mountvirtfs if it is not already mounted
+     (from an initrd).
+   * Force the /dev/shm->/run/shm symlink
+   * Skip making LVM virtual groups unavailable at shutdown
+     because the / or swap partitions may be still in use.
+
 2012-05-30 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Copy all entries in /lib/udev/devices to /dev in mounvirtfs
 
